Fix earliest blobsidecar tests